Fixed link not stretching over entire list item

--- a/docs/assets/plossys.css
+++ b/docs/assets/plossys.css
@@ -97,6 +97,12 @@
 
 .ps-version__item {
   height: 1.8rem;
+  padding: 0;
+  line-height: 1.9rem;
+}
+
+.ps-version__item a {
+  display: block;
   padding: 0 .6rem;
   line-height: 1.9rem;
   transition: 
@@ -105,7 +111,7 @@
   cursor: pointer;
 }
 
-.ps-version__item:hover {
+.ps-version__item a:hover {
   background: rgba(0,0,0,.07);
 }
 
